cmake_minimum_required(VERSION 3.17)
project(leetcode) # 工程名字，随你怎么叫都行

set(CMAKE_CXX_STANDARD 14)

add_executable(main main.cpp src/leetcode/bean/TreeNode.cpp src/leetcode/bean/TreeNode.h)
add_executable(235-LowestCommonAncestorOfABinarySearchTree src/leetcode/editor/cn/235-LowestCommonAncestorOfABinarySearchTree.cpp)
add_executable(46-Permutations src/leetcode/editor/cn/46-Permutations.cpp)
add_executable(70-ClimbingStairs src/leetcode/editor/cn/70-ClimbingStairs.cpp)
add_executable(122-BestTimeToBuyAndSellStockIi src/leetcode/editor/cn/122-BestTimeToBuyAndSellStockIi.cpp)
add_executable(455-AssignCookies src/leetcode/editor/cn/455-AssignCookies.cpp)
add_executable(127-WordLadder src/leetcode/editor/cn/127-WordLadder.cpp)
add_executable(200-NumberOfIslands src/leetcode/editor/cn/200-NumberOfIslands.cpp)
add_executable(1-TwoSum src/leetcode/editor/cn/1-TwoSum.cpp)
add_executable(81-SearchInRotatedSortedArrayIi src/leetcode/editor/cn/81-SearchInRotatedSortedArrayIi.cpp)
add_executable(33-SearchInRotatedSortedArray src/leetcode/editor/cn/33-SearchInRotatedSortedArray.cpp)
add_executable(153-FindMinimumInRotatedSortedArray src/leetcode/editor/cn/153-FindMinimumInRotatedSortedArray.cpp)
add_executable(874-WalkingRobotSimulation src/leetcode/editor/cn/874-WalkingRobotSimulation.cpp)
add_executable(121-BestTimeToBuyAndSellStock src/leetcode/editor/cn/121-BestTimeToBuyAndSellStock.cpp)
add_executable(53-MaximumSubarray src/leetcode/editor/cn/53-MaximumSubarray.cpp)
add_executable(1143-LongestCommonSubsequence src/leetcode/editor/cn/1143-LongestCommonSubsequence.cpp)
add_executable(22-GenerateParentheses src/leetcode/editor/cn/22-GenerateParentheses.cpp)
add_executable(529-Minesweeper src/leetcode/editor/cn/529-Minesweeper.cpp)
add_executable(18-FourSum src/leetcode/editor/cn/18-FourSum.cpp)
add_executable(55-JumpGame src/leetcode/editor/cn/55-JumpGame.cpp)
add_executable(45-JumpGameIi src/leetcode/editor/cn/45-JumpGameIi.cpp)
add_executable(74-SearchA2dMatrix src/leetcode/editor/cn/74-SearchA2dMatrix.cpp)
add_executable(64-MinimumPathSum src/leetcode/editor/cn/64-MinimumPathSum.cpp)
add_executable(322-CoinChange src/leetcode/editor/cn/322-CoinChange.cpp)
add_executable(198-HouseRobber src/leetcode/editor/cn/198-HouseRobber.cpp)
add_executable(213-HouseRobberIi src/leetcode/editor/cn/213-HouseRobberIi.cpp)
add_executable(589-NAryTreePreorderTraversal src/leetcode/editor/cn/589-NAryTreePreorderTraversal.cpp)
add_executable(91-DecodeWays src/leetcode/editor/cn/91-DecodeWays.cpp)
add_executable(79-WordSearch src/leetcode/editor/cn/79-WordSearch.cpp)
add_executable(212-WordSearchIi src/leetcode/editor/cn/212-WordSearchIi.cpp)
add_executable(208-ImplementTriePrefixTree src/leetcode/editor/cn/208-ImplementTriePrefixTree.cpp)
add_executable(547-FriendCircles src/leetcode/editor/cn/547-FriendCircles.cpp)
add_executable(367-ValidPerfectSquare src/leetcode/editor/cn/367-ValidPerfectSquare.cpp)
add_executable(190-ReverseBits src/leetcode/editor/cn/190-ReverseBits.cpp)